--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment 2</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3ceb7b1f93.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!------------------------
@@ -166,9 +167,23 @@
         </div>
     </div>
 <!-- extra section -->
-    <div>
-        
-    </div>
+    <!-- <div class="follow-section">
+        <div>
+            <h1>follow us on</h1>
+            <ul class="follow-icon">
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+            </ul>
+        </div>
+    </div> -->
+<!-- subscribe section -->
+    <!-- <div class="sub-section">
+        <div class="gmail-input">
+            <label for="Email">Enter your email</label>
+            <input type="email" name="email" id="user email">
+        </div>
+    </div> -->
 <!-- footer section -->
 <footer class="foot">
     All rights reserved copyright@2023 startup landing page design
